# hdim

./: .actrc  .cursorrules  .dockerignore  .env.customer-simulation  .env.dev  .env.example  .env.external-db  .env.external-db.example  .env.production  .env.production.example  .env.staging  .gitignore  .gitleaks.toml  .mcp.json  .nxignore  .vercelignore  00_IMPLEMENTATION_OVERVIEW.md  ABSOLUTE_FINAL_COMPLETION.md  ACCESSIBILITY_AUDIT_REPORT.md  ADVANCED_INTEGRATION_TESTING_REPORT.md  AGENTS.md  AGENT_1_COMPLETION_SUMMARY.md  AGENT_1_IMPLEMENTATION_ROADMAP.md  AGENT_2_DELIVERY_SUMMARY.md  AGENT_2_WORK_PLAN.md  AGENT_3B_IMPLEMENTATION_COMPLETE.md  AGENT_3B_QUICK_REFERENCE.md  AGENT_3B_TESTING_GUIDE.md  AGENT_3C_QUICK_REFERENCE.md  AGENT_3C_TDD_SWARM_COMPLETION_REPORT.md  AGENT_3_FINAL_PROJECT_SUMMARY.md  AGENT_3_USER_DOCUMENTATION_DEPLOYMENT.md  AGENT_5_IMPLEMENTATION_SUMMARY.md  AGENT_5_PORTAL_INTEGRATION_STATUS_REPORT.md  AGENT_6_GOVERNANCE_FRAMEWORK_DEPLOYMENT.md  AG_UI_IMPLEMENTATION_PROGRESS.md  AI_AGENT_IMPLEMENTATION_GUIDE.md  AI_AGENT_INTEGRATION_COMPLETE.md  AI_AGENT_TRAINING_GUIDE.md  AI_AUDIT_INTEGRATION_TESTING.md  (+723 more)
.claude/: MAHOOSUC_OS_INTEGRATION_SUMMARY.md  SLASH_COMMANDS_REFERENCE.md  settings.local.json
.codex/: config.toml
.github/: CODEOWNERS  GITHUB_ACTIONS_TROUBLESHOOTING.md  dependabot.yml  dependency-check-suppression.xml  pull_request_template.md
.serena/: README.md  SERVICE_INDEX.md  TOOLS_AND_WORKFLOWS.md  hdim-tools.sh  project.yml
backend/: .dockerignore  .dockerignore.bak  .gitignore  ALLERGY_INTOLERANCE_TDD_IMPLEMENTATION_REPORT.md  AUDIT_ARCHITECTURE.md  AUTHENTICATION-ARCHITECTURE.md  BATCH_API_REFERENCE.md  BUILD_DEPLOYMENT_SUMMARY.md  BULK_EXPORT_QUICK_REFERENCE.md  CURL_EXAMPLES.sh  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT_COMPLETE.md  Dockerfile  Dockerfile.template  FHIR_BULK_DATA_EXPORT_IMPLEMENTATION.md  HEALTH_SCORE_API_IMPLEMENTATION.md  HIPAA-CACHE-COMPLIANCE.md  NOTIFICATION_MOCKING_IMPLEMENTATION_STATUS.md  NOTIFICATION_SYSTEM_DEPLOYMENT_COMPLETE.md  NOTIFICATION_SYSTEM_STATUS.md  NOTIFICATION_SYSTEM_TEST_GUIDE.md  PATIENT_HEALTH_SCORE_CODE_SUMMARY.md  PATIENT_HEALTH_SCORE_TDD_IMPLEMENTATION.md  PHASE_19_COMPLETE.md  PHASE_1_4_COMPLETION_REPORT.md  PHASE_20_COMPLETE.md  PHASE_20_SUMMARY.md  PHASE_21_COMPLETE.md  PHASE_21_COMPLETE_100_PERCENT.md  PHASE_21_FEATURE_VALIDATION.md  PHASE_21_FIXES_COMPLETE.md  PHASE_21_FIX_PLAN.md  PHASE_21_FIX_SUMMARY.md  README.md  (+35 more)
backend/modules/services/ai-sales-agent/: .gitignore  Dockerfile.optimized  LAUNCH_CHECKLIST.md  README.md  pyproject.toml
backend/modules/services/ai-sales-agent/docker/: Dockerfile
backend/modules/services/ai-sales-agent/src/: __init__.py  config.py  main.py
backend/modules/services/ai-sales-agent/src/agents/: __init__.py  coordinator.py  demo_agent.py  discovery_agent.py  objection_handler.py  tools.py
backend/modules/services/ai-sales-agent/src/knowledge/: __init__.py  demo_scripts.py  discovery_playbook.py  objection_responses.py  personas.py
backend/modules/services/ai-sales-agent/tests/: __init__.py  test_demo_agent.py  test_discovery_agent.py  test_objection_handler.py
testing/agent-validation-harness/: pyproject.toml
testing/agent-validation-harness/fixtures/user_story_configs/: care_coordinator_stories.yaml  clinician_stories.yaml  evaluator_stories.yaml  quality_officer_stories.yaml
testing/agent-validation-harness/src/hdim_validation/: __init__.py  main.py
testing/agent-validation-harness/src/hdim_validation/evaluators/: __init__.py  clinical_accuracy_evaluator.py  deepeval_adapter.py  hipaa_evaluator.py
tools/evaluation-harness/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tools/evaluation-harness/src/evaluation_harness/: __init__.py  api.py  config.py  main.py  models.py
tools/evaluation-harness/src/evaluation_harness/healthcare/: __init__.py  clinical.py  hedis.py  hipaa.py
tools/evaluation-harness/src/evaluation_harness/metrics/: __init__.py  base.py  deepeval_metrics.py  registry.py
tools/evaluation-harness/tests/: __init__.py  test_api.py  test_healthcare_metrics.py
(+10819 files in other folders)
